fixed div overlap and links

--- a/client/styles.css
+++ b/client/styles.css
@@ -107,7 +107,6 @@ a:visited{
 }
 
 .kbuttons{
-  
   position: relative;
   left: 80px;
   display: flex;
@@ -198,6 +197,8 @@ i{
 #kbuttons{
   position: relative;
   bottom: 10px;
+  padding-left: 100px;
+  padding-right: 100px;
 }
 
 #kbuyitbutton{
